fixed vertical alignment of login panel

--- a/styles/login.less
+++ b/styles/login.less
@@ -1,6 +1,6 @@
 .LoginLayout {
 	text-align: center;
-	
+	display: flex;
 	align-items: center;
 	justify-content: center;
 	
